mount the data folder as volume to caddy container

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 						</div>
 						<div class="row">
 							<div class="col">
-								<p data-i18n="topic">Mihin tehtäviin liittyvää oppimista haluat arvioida muutos tekstiin?</p>
+								<p data-i18n="topic">Mihin tehtäviin liittyvää oppimista haluat arvioida?</p>
 								<input type="text" name="topic" class="form-control">
 							</div>
 						</div>
